# hybrid-rag

./: .gitattributes  README.md  main.py  pyproject.toml  utils.py
.github/workflows/: rag_eval.yml  sync-to-hf.yml
chroma_db/: chroma.sqlite3
evaluation/: evaluate_rag.py
src/: main.py  utils.py
ui/: app.py  config.py  evaluation.py  pipeline.py
