[project]
name = "hybrid-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cohere>=5.20.7",
    "kaggle>=2.0.0",
    "kagglehub>=1.0.0",
    "langchain>=1.2.12",
    "langchain-core>=1.2.19",
    "langchain-text-splitters>=1.1.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
    "weaviate>=0.1.2",
    "weaviate-client>=4.20.4",
]
